--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
+	<h1>DODGE THE GELATINOUS CUBES AND COLLECT THE TROPHY</h1>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
